# Chadeo

./: .env  .gitignore  commands.txt  requirements.txt
chadeo/: .gitignore  apps.py  consumers.py  urls.py  views.py
chadeo/templates/chadeo/: base.html  chat_room.html  create_user.html  header.html  index.html  login.html
chadeo/templates/chadeo/partials/: messages.html
media_worker/: .gitignore  CMakeLists.txt  main.cpp
myProject/: asgi.py  settings.py  urls.py
protos/: signaling.proto
